--- a/js-base-note/3.js的变量、作用域和内存问题.md
+++ b/js-base-note/3.js的变量、作用域和内存问题.md
@@ -1,3 +1,5 @@
+# js的变量、作用域和内存问题
+
 1. 基本类型和引用类型
 2. 执行环境和作用域
 3. 垃圾回收
@@ -156,7 +158,7 @@ fn();
 
 如何解决这个问题呢？使用尾调用
 
-### 尾调用
+### 代码优化：尾调用
 尾调用，就是在函数结束的时候 return 一个函数调用。如：
 ```js
 function fn() {
@@ -166,5 +168,31 @@ function fn() {
 fn();    // 不会报错，没有内存泄漏
 ```
 因为，return 代表当前函数执行完毕，所以在调用下一个 fn 函数前，会把上一个 fn 的执行环境删除。这样就防止递归产生内存泄漏。 
+
+注意：如果上一个函数的局部变量需要被下一个函数第调用的时候，内存无法释放。如：
+
+- 不释放内存，常用于闭包函数
+```js
+function fn() {
+    var a = 0
+    return function foo(){
+        return ++a
+    };
+}
+var bar = fn();
+bar()   // 1
+bar()   // 2
+bar()   // 3
+```
+
+- 可释放，常用于递归函数
+```js
+function fn(param) {
+    if(param > 1000) return param;
+    var a = 1
+    return fn(param + 1)
+}
+fn(0)   // 1000
+```
 
 ******************
