--- a/js-base-note/3.js的变量、作用域和内存问题.md
+++ b/js-base-note/3.js的变量、作用域和内存问题.md
@@ -6,7 +6,7 @@
 
 ****************
 
-## 基本类型和引用类型
+## 变量的基本类型和引用类型
 基本数据类型有 5 种：Undefined, Null, Number, String, Boolean, Object   
 其中：
 - 基本类型值：Undefined, Null, Null, Number, String, Boolean  
