--- a/js-base-note/浏览器渲染页面.md
+++ b/js-base-note/浏览器渲染页面.md
@@ -43,7 +43,7 @@
 - 浏览器根据 Render Tree 计算出每个节点的最终样式和在屏幕中的位置 
 - 最后描绘出整个页面
 
-![](https://img-blog.csdn.net/20160724103859664)
+<img src="https://img-blog.csdn.net/20160724103859664">
 
 但是实际上，并没有这么简单。为了更好的用户体验，浏览器渲染引擎将会尽可能早的将内容呈现到屏幕上，并不会等到所有的 html 都解析完成之后再去构建和布局render树。它是解析完一部分内容就显示一部分内容，同时，可能还在通过网络下载其余内容。
 
@@ -52,7 +52,7 @@
 
 2. 浏览器开始载入 html 代码，发现 head 标签内有一个 link 标签引用外部CSS或JS文件
 
-3. 浏览器又发出CSS及JS文件的请求，等待服务器返回这个CSS，JS文件，等待时不加载 dom 节点
+3. 浏览器又发出CSS及JS文件的请求，等待服务器返回这个CSS，JS文件，等待时不加载 dom 
 
 4. 浏览器继续载入html中 body 部分的代码，并且CSS，JS文件已经拿到手了，可以开始渲染页面了
 
