--- a/js-base-note/浏览器渲染页面.md
+++ b/js-base-note/浏览器渲染页面.md
@@ -68,7 +68,7 @@
 ### 优化
 1. 不要一条一条地修改 DOM 的样式。与其这样，还不如预先定义好 css 的 class，然后修改 DOM 的 className。
 2. 不要把 DOM 结点的属性值放在一个循环里当成循环里的变量。 
-3. 千万不要使用 table 布局。因为可能很小的一个小改动会造成整个 table 的重新布局。
+3. 尽量不要使用 table 布局。因为可能很小的一个小改动会造成整个 table 的重新布局。
 
 *********************
 
