--- a/js-base-note/浏览器渲染页面.md
+++ b/js-base-note/浏览器渲染页面.md
@@ -34,6 +34,7 @@
 先来张图
 
 ![](https://images0.cnblogs.com/news/66372/201305/22110607-791cc828c8e64c18b0d86d573338a345.jpg)
+[原图链接](https://images0.cnblogs.com/news/66372/201305/22110607-791cc828c8e64c18b0d86d573338a345.jpg)
 
 这张图什么意思呢
 - html 会被浏览器解析成 DOM Tree
@@ -43,7 +44,8 @@
 - 浏览器根据 Render Tree 计算出每个节点的最终样式和在屏幕中的位置 
 - 最后描绘出整个页面
 
-<img src="https://img-blog.csdn.net/20160724103859664">
+![](https://img-blog.csdn.net/20160724103859664)
+[原图链接](https://img-blog.csdn.net/20160724103859664)
 
 但是实际上，并没有这么简单。为了更好的用户体验，浏览器渲染引擎将会尽可能早的将内容呈现到屏幕上，并不会等到所有的 html 都解析完成之后再去构建和布局render树。它是解析完一部分内容就显示一部分内容，同时，可能还在通过网络下载其余内容。
 
