--- a/js-base-note/2.js的基本概念.md
+++ b/js-base-note/2.js的基本概念.md
@@ -135,8 +135,10 @@ var a = "123";
 var a = '123';
 
 var b = '123"; // 错误 '
+```
 
-// 与 c 语言相同，某些字符需要转义， 如：
+与 c 语言相同，某些字符需要转义， 如：
+```js
 var c = "\\n123";  // 输出 "\n123"
 ```
 
