--- a/js-base-note/浏览器渲染页面.md
+++ b/js-base-note/浏览器渲染页面.md
@@ -1,79 +1,235 @@
 # 浏览器渲染页面
 
-## 前言
-一个页面通常是这样的：
+## 一、前言
+假如有这么一个页面：
 ```html
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title></title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <script>
+    if(document.getElementById('dom')){
+        console.log('dom 存在')
+    }else {
+        console.log('dom 不存在')
+    }
+    </script>
 </head>
 <body>
-    <div>
-        ...
-    </div>
-
-    <script src="index.js"></script>
+    <div id="dom" style="background:red;width:100px;height:100px;"></div>
 </body>
 </html>
 ```
-这么一来，一个网页就有 html \ css \ js 三种文件。我们知道 css 可以设置 dom 的样式，js 也可以对 dom 进行修改样式、更改结构等。那么，在 css , js 同时在更改 dom 的时候，浏览器是如何正确渲染网页？
+当这个页面运行的时候，控制台会输出什么呢？   
+答案是：'dom 不存在'。
 
+接下来让我们慢慢分析原因。
 
 ***************
 
 
-## 浏览器的渲染
-在谈这个之前，或许有人会问：“我们为什么要知道浏览器对页面的渲染方式？”
+## 二、了解浏览器对页面的渲染方式的意义
 
-答：了解了浏览器对页面的渲染机制后，我们在写代码的过程中，就能够更好地进行代码优化。
+- 避免踩坑
+- 有助于处理 bug
+- 有助于优化代码
 
-### 浏览器对 html \ css \ js 三种文件的处理
-先来张图
 
+*****************
+
+
+## 三、浏览器对 html 、css 、js 、image 等文件的处理
+
+先来张图  
 ![](https://images0.cnblogs.com/news/66372/201305/22110607-791cc828c8e64c18b0d86d573338a345.jpg)
 [原图链接](https://images0.cnblogs.com/news/66372/201305/22110607-791cc828c8e64c18b0d86d573338a345.jpg)
 
-这张图什么意思呢
-- html 会被浏览器解析成 DOM Tree
-- css 会被解析成 CSSOM Tree （CSS 规则树）
-- js 则通过 DOM API 和 CSSOM API 来更改 DOM Tree 和 CSSOM Tree
-- DOM Tree 和 CSSOM Tree 通过匹配计算，构造出 Render Tree （渲染树）
-- 浏览器根据 Render Tree 计算出每个节点的最终样式和在屏幕中的位置 
-- 最后描绘出整个页面
+
+### 1. 浏览器对 html 的解析顺序
+
+浏览器解析 html 的时候，是从上到下对 html 的每个标签进行解析，并且在 DOM 树的相应位置上添加对应的节点（不会记录样式），从而形成 DOM 树。
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
+</head>
+<body>
+    <div>
+        <span>浏览器渲染</span>
+    </div>
+</body>
+</html>
+```
+
+DOM 树结构
+```text
+html
+  |-- head
+  |     |-- meta
+  |     |-- title
+  |     |-- link
+  |     |-- script
+  |
+  |-- body
+        |-- div
+              |-- span
+                    |-- 浏览器渲染
+```
+
+
+### 2. CSS 的加载
+
+- css 文件是异步加载的。css 加载时，浏览器会继续解析 html。
+- css 会被浏览器解析成 CSSOM 树。然后，跟 DOM 树进行样式匹配，生成 Render 树（即：渲染树）。
+- 最后，浏览器根据 Render 树，绘画出整个网页（即：paint 过程）。
 
 ![](https://img-blog.csdn.net/20160724103859664)
 [原图链接](https://img-blog.csdn.net/20160724103859664)
 
-但是实际上，并没有这么简单。为了更好的用户体验，浏览器渲染引擎将会尽可能早的将内容呈现到屏幕上，并不会等到所有的 html 都解析完成之后再去构建和布局render树。它是解析完一部分内容就显示一部分内容，同时，可能还在通过网络下载其余内容。
 
-### 过程
-1. 用户第一次访问网址，浏览器向服务器发出请求，服务器返回 html 文件
+### 3. JS 的加载与执行
 
-2. 浏览器开始载入 html 代码，发现 head 标签内有一个 link 标签引用外部CSS或JS文件
+#### 加载
+- js 文件是阻塞加载的。js 加载时，浏览器会停止解析 html，即停止构建 DOM 树。
+- js 文件加载完成后会被马上执行，执行完后，浏览器才会继续解析 html。
 
-3. 浏览器又发出CSS及JS文件的请求，等待服务器返回这个CSS，JS文件，等待时不加载 dom 
+#### 执行
+- JS 可以通过 DOM API 和 CSSOM API 分别操作 DOM 树与 CSSOM 树，来更改 dom 结构和样式的。
+- 只要 DOM 树与 CSSOM 树有一个被更改，Render 树也会随之变化，浏览器就会对被更改的部分重新渲染。
+- 另外，JS 只能操作当前的 DOM 树。如果该 DOM 树没有构建完成，那么，JS 就无法操作不存在 DOM树上的节点。这就是为什么控制台会输出 'dom 不存在' 的理由。
+- 所以，为了让 js 代码在 DOM 树构建完成后才去执行，我们写 js 代码的时候一定要这么写：
 
-4. 浏览器继续载入html中 body 部分的代码，并且CSS，JS文件已经拿到手了，可以开始渲染页面了
+方法一
+```js
+$(function() {
+    //... 你的代码
+});
+```
 
-5. 浏览器在代码中发现一个 img 标签引用了一张图片，向服务器发出请求。此时浏览器不会等到图片下载完，而是继续渲染后面的代码
+方法二
+```js
+$(document).ready(function(){
+    //... 你的代码
+})
+```
 
-6. 服务器返回图片文件，由于图片占用了一定面积，影响了页面布局，因此浏览器需要回过头来重新渲染这部分代码
+方法三
+```js
+window.onload = function(){
+    //... 你的代码
+}
+```
 
-7. 浏览器发现了一个包含一行 Javascript 代码的 script 标签，赶快执行它
 
-8. Javascript 脚本执行了这条语句，它命令浏览器隐藏掉代码中的某个 div （style.display=”none”）。突然就少了这么一个元素，浏览器不得不重新渲染这部分代码
+### 4. 图片的加载
+
+先看一个动态创建 img 标签，并获取该图片高度的例子：
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+<script>
+    var img = document.createElement('img')
+    img.src = "https://images0.cnblogs.com/news/66372/201305/22110607-791cc828c8e64c18b0d86d573338a345.jpg";
+
+    var body = document.getElementsByTagName('body')[0]
+    body.appendChild(img);
+    console.log(body.innerHTML)
+    console.log(img.offsetHeight)
+</script>
+</body>
+</html>
+```
+控制台输出的 img.offsetHeight 为多少？ 答案： 0  
+
+原因：
+- 图片也是异步加载的。
+- 当浏览器解析到 img 标签，并且该图片是第一次访问时，浏览器会发图片请求，此时，浏览器继续解析 html，渲染 DOM 树。
+- 请求图片是有延迟的。如果 img 标签一开始没有设置高度（宽度）或其它样式，其高度（宽度）的初始值为 0，当图片加载完成后，图片才会撑开 img 标签的高度（宽度）。
+- 所以，在图片加载完成之前是无法获取到图片的高度的。
+- 为了能获取到图片的高度，我们必须监听图片是否加载完成，例如：
+
+原生 JS
+```js
+var img = document.createElement('img')
+img.src = "https://images0.cnblogs.com/news/66372/201305/22110607-791cc828c8e64c18b0d86d573338a345.jpg";
+
+img.onload = function(){
+    console.log(this.offsetHeight);
+}
+
+var body = document.getElementsByTagName('body')[0]
+body.appendChild(img);
+```
+
+jQuery
+```js
+var img = $('<img src="https://images0.cnblogs.com/news/66372/201305/22110607-791cc828c8e64c18b0d86d573338a345.jpg">')
+img.ready(function(){
+    console.log(this.offsetHeight);
+})
+$('body').append(img)
+```
 
 
-### 优化
-1. 不要一条一条地修改 DOM 的样式。与其这样，还不如预先定义好 css 的 class，然后修改 DOM 的 className。
-2. 不要把 DOM 结点的属性值放在一个循环里当成循环里的变量。 
-3. 尽量不要使用 table 布局。因为可能很小的一个小改动会造成整个 table 的重新布局。
+### 5. 回流（reflow / layout）与 重绘（repaint）
+
+#### 回流（reflow / layout）
+- 当 dom 结构发生改变或节点大小发生变化时，节点位置需要重新计算。这个过程称为回流。
+
+#### 重绘（repaint）
+- 屏幕的更新行为称作重绘。
+
+由于回流原本的性能消耗就不小，回流之后又必定需要重绘，所以，触发回流，浏览器的性能消耗会很大。
+
+#### 减少回流与重绘
+- 不要一条一条地修改 dom 的样式。与其这样，还不如预先定义好 css 的 class，然后修改 dom 的 className。
+- 不要过多进行重复的样式计算操作。如果你需要重复利用一个静态样式值，可以只计算一次，用一个局部变量储存，然后利用这个局部变量进行相关操作。
+
+
+
+
+*************************
+
+
+## 浏览器渲染页面的例子
+
+1. 用户输入网址（假设是个html页面，并且是第一次访问），浏览器向服务器发出请求，服务器返回html文件。
+
+2. 浏览器开始载入 html 代码，发现＜head＞标签内有一个＜link＞标签引用外部 CSS 文件。
+
+3. 浏览器又发出 CSS 文件的请求，并异步加载。 
+
+4. 浏览器继续载入 html 中 ＜body＞ 部分的代码，这时 CSS 文件已经拿到手了，可以开始渲染页面了； 
+
+5. 浏览器在代码中发现一个＜img＞标签引用了一张图片，向服务器发出请求。此时浏览器不会等到图片下载完，而是继续渲染后面的代码； 
+
+6. 服务器返回图片文件，由于图片占用了一定面积，影响了后面段落的排布，因此浏览器需要回过头来重新渲染这部分代码（回流、重绘）。
+
+7. 浏览器发现了一个 ＜script＞ 标签的 js 引用，阻塞加载 js，并赶紧运行。  
+
+8. Javascript 脚本执行了这条语句，它命令浏览器隐藏掉代码中的某个＜div＞ （style.display=”none”）。突然少了这么一个元素，浏览器不得不重新渲染这部分代码（回流、重绘）。 
+
+9. 终于等到了＜/html＞的到来，浏览器泪流满面…… 
+
+10. 等等，还没完，用户点了一下界面中的“换肤”按钮，Javascript 让浏览器换了一下＜link＞标签的 CSS 路径； 
+
+11. 浏览器召集了在座的各位＜div＞＜span＞＜ul＞＜li＞们，“大伙儿收拾收拾行李，咱得重新来过……”，浏览器向服务器请求了新的CSS文件，重新渲染页面。
+
 
 *********************
 
->参考链接：[https://blog.csdn.net/XIAOZHUXMEN/article/details/52014901](https://blog.csdn.net/XIAOZHUXMEN/article/details/52014901)
+>参考链接：[https://blog.csdn.net/xiaozhuxmen/article/details/52014901](https://blog.csdn.net/xiaozhuxmen/article/details/52014901)
 
 >参考文章：《how browsers work》
