--- a/js-base-note/3.js的变量、作用域和内存问题.md
+++ b/js-base-note/3.js的变量、作用域和内存问题.md
@@ -6,7 +6,7 @@
 
 ****************
 
-## 变量的基本类型和引用类型
+## 一、变量的基本类型和引用类型
 基本数据类型有 5 种：Undefined, Null, Number, String, Boolean, Object   
 其中：
 - 基本类型值：Undefined, Null, Null, Number, String, Boolean  
@@ -66,7 +66,7 @@ b.name  // "C++"
   
 ***********************
 
-## 执行环境及作用域
+## 二、执行环境及作用域
 所谓执行环境就是，函数、指令在执行的过程中可以访问到的变量与函数。  
 每个函数都有自己的执行环境。当执行流进入一个函数时，函数的环境就会被推入一个环境栈中，函数执行完后，栈将其环境弹出。
 
@@ -140,7 +140,7 @@ console.log(k, y) // 10  2
 
 ******************
 
-## 垃圾回收
+## 三、垃圾回收
 函数执行完毕后，函数运行时产生的环境变量可能不再使用，为了不让这些无用的变量占用内存，就必须将其回收删除，释放空间，防止内存泄漏。
 
 浏览器常用的方法有：标记清除；不常用的方法：引用计数。当然，这些都是浏览器自动完成的。
