--- a/js-base-note/4.js引用类型.md
+++ b/js-base-note/4.js引用类型.md
@@ -8,14 +8,14 @@
 
 **********************
 
-## 前言
+## 一、前言
 之前已经说过，js 的六大基本数据类型中（es6增加了 Symbol 类型，公 7 大基本数据类型）只有 Object 是引用类型。
 
 那么，Array, Data, RegExp, Function 又是什么？它们都是对象 Object。
 
 ************************
 
-## Object 类型
+## 二、Object 类型
 创建一个对象的方法有种很多写法，如：
 ```js
 var obj = new Object()
@@ -46,7 +46,7 @@ obj['name'] = 'Jon'
 
 **************************
 
-## Array 类型
+## 三、Array 类型
 创建一个 Array
 ```js
 var a = new Array(1,'2', true, function fn(){})
@@ -221,7 +221,7 @@ sum  // 15
 
 *********************************
 
-## Date 类型
+## 四、Date 类型
 ```js
 var now = new Date()
 
@@ -253,13 +253,13 @@ var now = new Date()
 
 ***************************
 
-## RegExp 类型
+## 五、RegExp 类型
 正则表达式，用于字符匹配（略）
 
 
 ***********************
 
-## Function 类型
+## 六、Function 类型
 每一个函数都是 Function 类型的实例，函数名就是指向函数对象的指针。
 ```js
 function fn(a,b){
