--- a/js-base-note/5.js面向对象.md
+++ b/js-base-note/5.js面向对象.md
@@ -8,15 +8,249 @@
 ***********************
 
 
-## 前言
-### 对象
+## 一、前言
+### 1. 对象
 对象是人们要进行研究的任何事物，它不仅能表示具体的事物，还能表示抽象的规则、计划或事件。对象具有状态，一个对象用数据值来描述它的状态。对象还有操作，用于改变对象的状态，对象及其操作就是对象的行为。对象实现了数据和操作的结合，使数据和操作封装于对象的统一体中。
 
-### 类
+### 2. 类
 具有相同特性（数据元素）和行为（功能）的对象的抽象就是类。因此，对象的抽象是类，类的具体化就是对象，也可以说类的实例是对象，类实际上就是一种数据类型。类具有属性，它是对象的状态的抽象，用数据结构来描述类的属性。类具有操作，它是对象的行为的抽象，用操作名和实现该操作的方法来描述。
 
 
 ********************
+
+
+## 二、了解对象（不用熟练运用，记住有这么回事就行了，说不定哪天用得上）
+
+### 1. 创建一个对象
+js 创建一个对象很简单，如：
+```js
+var a = new Object()
+var b = {
+    name: 'k',
+    age: 12,
+    sayName: function(){
+        console.log(this.name)
+    }
+}
+```
+
+### 2. 对象的属性类型
+对象的属性类型分为：
+- [[configurable]] ：能否通过 delete 删除
+- [[enumberabloe]] : 能否通过 for-in 遍历
+- [[writable]] ：能否修改属性值
+- [[value]] ：包含这个属性的数据
+
+可通过以下方式修改属性类型：
+```js
+var o = {
+    name: 'Jon',
+}
+Object.defineProperty(o, "age", {
+    configurable: true,  // 能通过 delete 删除
+    enumberabloe: true,  // 能通过 for-in 遍历
+    writable: true,      // 能修改属性值
+    value: 123           // 该属性值
+})
+o  // {name: "Jon", age: 123} 
+```
+
+定义多个自定义属性：
+```js
+var o = {}
+Object.defineProperties(o,{
+    'name': {
+        writable: true,      // 能修改属性值
+        value: 'Jon'         // 该属性值
+    },
+    'age': {
+        writable: true,      // 能修改属性值
+        value: 123           // 该属性值
+    }
+})
+o  // {name: "Jon", age: 123} 
+```
+
+### 3. 访问器属性
+- [[get]] 读取时调用的函数
+- [[set]] 修改时调用的函数
+
+通常我们是这样访问属性值的：
+```js
+var o = {
+    name: 'Jon',
+    age: 55
+}
+o.name   // 'Jon'
+o.age = 12  
+o.age    // 12
+```
+
+我接下来看一下访问器属性：
+```js
+var o = {
+    _name: '',
+    _age: 0,
+    _changeTime: 0
+}
+Object.defineProperty(o, 'name', {
+    get: function(){ 
+        this._changeTime ++;
+        return this._name
+    },
+    set: function(value){
+        this._changeTime ++;
+        this._name = value
+    }
+})
+o.name = 'Jon'
+o.name   // 'Jon'
+o        // {_name: "Jon", _age: 0, _changeTime: 1}
+```
+我们可以看到对象里并没有 name: 'Jon'，但却可以访问到。获取和修改是 _changeTime 属性也发生变化。当然，还有其它定义访问器属性的方法：
+```js
+o.__defineGetter__('name', function(){
+    return this._name
+})
+o.__defineSetter__('name',function(value){
+    this._name = value
+})
+``` 
+### 4. 总结
+为一个对象添加一个属性非常简单，如：
+```js
+var o = { name: 'Jon' }
+``` 
+那么，我们为什么要搞的这么复杂呢？
+1. 加深对对象属性的了解（属性类型）
+2. 
+
+
+**************
+
+
+## 三、创建对象（重点：熟记、熟练）
+接下来将会介绍到的几个创建对象的方法
+- 工厂模式
+- 构造函数模式
+- 原型模式
+- 组合使用构造函数模式和原型模式
+- 动态原型模式
+- 寄生构造函数模式
+- 稳妥型构造模式 
+
+### 1. 工厂模式
+创建一个对象（士兵）很简单
+```js
+var soldier = {
+    hp: 100,
+    max_ph: 100,
+    recover: function(){
+        var new_hp = this.hp + 20
+        this.hp =  new_hp > this.max_ph ? this.max_ph : new_hp
+    }
+}
+```
+
+但创建一百、一千个士兵总不能也一个个创建吧。这时我们想到了 for 循环：  
+
+问题又来了，我现在 100 个地方的代码需要创建 1000 个士兵，并且士兵的初始属性需要修改，这就要修改 100 个地方的代码，这样管理起士兵对象就有点困难了，这时候我们就要用到构造函数，借此方便我们管理士兵的属性：
+```js
+function createSoldier(hp, max_hp){
+    var person = {
+        hp: hp,
+        max_ph: max_hp,
+        recover: function(){
+            var new_hp = this.hp + 20
+            this.hp =  new_hp > this.max_ph ? this.max_ph : new_hp
+        }
+    }
+    return person;
+}
+var x = createSoldier(100, 100);
+```
+这样在创建士兵时调用该函数，管理起来就很方便了。在函数里创建了一个对象，然后把该对象return出去，这种方法就是工厂模式。  
+但由这种方法创建的对象无法识别其对象类型，为了解决这个问题，构造函数模式出现了。（如何识别对象的类型在构造函数模式里讲）
+
+
+### 2. 构造函数模式
+构造函数模式是怎么样的呢？我们将之前的工厂模式修改成构造函数模式。
+```js
+function Soldier(hp, max_hp){
+    this.hp = hp;
+    this.max_ph = max_hp;
+    this.recover = function(){
+        var new_hp = this.hp + 20
+        this.hp =  new_hp > this.max_ph ? this.max_ph : new_hp
+    }
+}
+var soldier = new Soldier(100, 100);
+```
+比较构造函数模式和工厂模式的不同：
+- 构造函数模式直接将属性和方法付给了 this 。
+- 构造函数模式没有在内部显式创建对象，没有 return 语句。
+- 构造函数模式创建对象时要使用 new 关键字。
+
+如何识别对象的类型呢？
+```js
+soldier.constructor === Soldier // true
+soldier instanceof Soldier      // true
+```
+这样就解决了识别对象类型的问题了。  
+
+
+- 然而，问题总是被不断提出的。下一个问题是：
+```js
+// 引用上面的 Soldier 构造函数
+var s1 = new Soldier(100, 100);
+var s2 = new Soldier(100, 100);
+s1.recover === s2.recover  // false
+```
+s1 和 s2 的 recover 函数不是同一个函数。也就是说创建两个对象实例时，创建了两个函数。  
+两个 recover 函数都是完成同样的任务，那么就没必要创建两次，重复创建只会占用更多的内存。  
+所以，修改一下：
+```js
+function Soldier(hp, max_hp){
+    this.hp = hp;
+    this.max_ph = max_hp;
+    this.recover = recover;
+}
+function recover(){
+    var new_hp = this.hp + 20
+    this.hp =  new_hp > this.max_ph ? this.max_ph : new_hp
+}
+
+var s1 = new Soldier(100, 100);
+var s2 = new Soldier(100, 100);
+s1.recover === s2.recover  // true
+```
+但是，这种做法就意味着，如果 Soldier 有很多方法，就要在外部定义很多函数。这不符合我们的封装理念。为了解决这个问题，就有了原型模式。
+
+
+### 3. 原型模式
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
