--- a/js-base-note/面向对象.md
+++ b/js-base-note/面向对象.md
@@ -228,7 +228,12 @@ s1.recover === s2.recover  // true
 
 
 ### 3. 原型模式
+所谓原型模式就是在创建构造函数的同时，设置一个公共对象，让由该构造函数创建出来的所有对象能够共用该公共对象。
 
+我们用原型模式对上面的构造函数进行改写
+```js
+
+```
 
 
 
