--- a/js-base-note/函数创建.md
+++ b/js-base-note/函数创建.md
@@ -126,6 +126,24 @@ fn.apply(obj)
 我们会发现，箭头函数的 this 是没有办法被更改的。
 因为无论显示更改还是隐式更改，都只能更改函数自身的 this，而箭头函数的 this 不是自己的，而是像普通变量一样从外部引进来的。
 
+*******************************
+## 三、例子
+例1：
+```js
+var length = 1
+function fn(){
+    console.log(this.length)
+}
+var obj = {
+    length: 2,
+    f: function(fn){
+        fn()
+        arguments[0]()
+    }
+}
+obj.f(fn, 1, 2, 3)
+```
+
 ****************************
 
 ## 三、总结
