--- a/js-base-note/函数创建.md
+++ b/js-base-note/函数创建.md
@@ -143,6 +143,47 @@ var obj = {
 }
 obj.f(fn, 1, 2, 3)
 ```
+例2： 
+```js
+var x = 1
+var obj = {
+    x: 2
+}
+obj.fn = ()=>{
+    return this.x
+}
+obj.fn()
+```
+例3：
+```js
+var length = 100
+var a = [
+    1,
+    2,
+    3,
+    ()=>{ return this.length }, 
+    function(){ return this.length }
+]
+a[3]()
+a[4]()
+```
+例4：
+```js
+var x = 1
+var obj = {
+    x: 2,
+    fn: function(){
+        var x = 3
+        return ()=>{
+            var x = 4
+            return function(){
+                return this.x
+            }.apply(this)
+        }
+    }
+}
+obj.fn()()
+```
 
 ****************************
 
