--- a/学习安排/学习安排1.md
+++ b/学习安排/学习安排1.md
@@ -20,7 +20,7 @@
 
 - `Node.js`   
 `NodeJs` 用来写后台的  
-推荐书籍：`《Node 与 Express 开发》`   
+推荐书籍：`《Node 与 Express 开发》`、`《node.js深入浅出》`   
 推荐网站：[《Node.js Express 框架 | 菜鸟教程》](http://www.runoob.com/nodejs/nodejs-express-framework.html)、[《一起学 Node.js》](https://github.com/nswbmw/N-blog)  
 以后，招新你们要用这个写微信后台，会使用 express 框架就行了。
 
