继承、cdn缓存、浏览器缓存

--- a/js-base-note/浏览器缓存策略.md
+++ b/js-base-note/浏览器缓存策略.md
@@ -2,7 +2,7 @@
 
 ## 前言
 浏览器的缓存策略到底是用来做什么的？  
-缓存策略是服务器端来进行配置的。它是用来尽可能防止资源重复下载、减少资源下载次数、提高页面加载速度、减低宽带成本等。
+浏览器缓存也就是 http 缓存。该缓存策略是服务器端来进行配置的。它是用来尽可能防止资源重复下载、减少资源下载次数、提高页面加载速度、减低宽带成本等。
 
 浏览器的缓存策略的缓存控制分为两种：
 - `强缓存`
@@ -41,9 +41,10 @@
 ***
 
 ## 三、总结
-当浏览器发请求时，先判断是否已存在缓存，如果没有，则向服务器发起资源请求。如果有，判断缓存是否过期（强缓存阶段），如果未过期，则直接使用缓存资源。如果已过期，浏览器向服务器发送带 `if-none-match` 和 `if-modified-since` 字段（没有就不带）的请求，服务器优先判断 `Etag` 字段再判断 `Last-modified`，依情况调用缓存策略。
+当浏览器发请求时，先判断是否已存在缓存，如果没有，则向服务器发起资源请求。如果有，判断缓存是否过期（强缓存阶段），如果未过期，则直接使用缓存资源。如果已过期，浏览器向服务器发送带 `if-none-match`（即`Etag`的内容记录） 和 `if-modified-since`（即`last-modified`的内容记录） 字段（没有就不带）的请求，服务器优先判断 `if-none-match`（即`Etag`的内容记录） 再判断 `if-modified-since`（即`last-modified`的内容记录）。如果有 `Etag` 的记录，就不需要判断 `last-modified` 的记录。
 
 ![](../image/浏览器缓存策略1.jpg)
 
 ***
+
 END
