--- a/js-base-note/面向对象.md
+++ b/js-base-note/面向对象.md
@@ -228,12 +228,77 @@ s1.recover === s2.recover  // true
 
 
 ### 3. 原型模式
-所谓原型模式就是在创建构造函数的同时，设置一个公共对象，让由该构造函数创建出来的所有对象能够共用该公共对象。
+所谓原型模式就是在创建构造函数的同时，设置一个公共对象，让由该构造函数创建出来的所有对象能够共用该公共对象。该公共对象是什么呢？就是构造函数的 `prototype` 属性。
 
 我们用原型模式对上面的构造函数进行改写
 ```js
+function Soldier(hp, max_hp){
+    this.hp = hp
+    this.max_ph = max_hp
+}
+Soldier.prototype.recover = function (){
+    var new_hp = this.hp + 20
+    this.hp =  new_hp > this.max_ph ? this.max_ph : new_hp
+}
 
+var s1 = new Soldier(100, 100);
+var s2 = new Soldier(100, 100);
+s1.recover === s2.recover  // true
 ```
+当然，你也可以这么写：
+```js
+function Soldier(hp, max_hp){
+    this.hp = hp
+    this.max_ph = max_hp
+}
+Soldier.prototype = {
+    constructor: Soldier,
+    recover: function (){
+        var new_hp = this.hp + 20
+        this.hp =  new_hp > this.max_ph ? this.max_ph : new_hp
+    }
+}
+```
+注意，这么写的话要在 `prototype` 修改 `constructor` 属性为当前构造函数。至于为什么，会在[继承](../继承.md)里说明。
+
+但原型模式也是存在缺点的：
+```js
+function A(){}
+A.prototype.array = [1, 2, 3]
+
+var a = new A()
+var b = new B()
+a.array.push(4)
+
+a.array // [1, 2, 3, 4]
+b.array // [1, 2, 3, 4]
+```
+改了 a 的 array 属性后，b 的 array 属性也被改了。原型最好不要出现除函数外的引用类型值。
+
+
+### 4. 组合使用构造函数模式和原型模式
+这种模式是可以解决上面的问题的：
+```js
+function A(){
+    this.array = [1, 2, 3]
+}
+A.prototype.say = function(){}
+
+var a = new A()
+var b = new B()
+a.array.push(4)
+
+a.array // [1, 2, 3, 4]
+b.array // [1, 2, 3]
+```
+方法写在原型上，其他属性写在构造函数内。
+
+最最常用的几种创建对象的模式就这么几个了，还有其它几种模式都是这几种的衍生，在这里就不详细说了。
+***
+
+END
+
+
 
 
 
