原生异步请求

--- a/js-base-note/3.js的变量、作用域和内存问题.md
+++ b/js-base-note/3.js的变量、作用域和内存问题.md
@@ -7,9 +7,7 @@
 ****************
 
 ## 一、变量的基本类型和引用类型
-基本数据类型有 5 种：Undefined, Null, Number, String, Boolean, Object   
-其中：
-- 基本类型值：Undefined, Null, Null, Number, String, Boolean  
+- 基本类型值：Undefined, Null, Number, String, Boolean  
 - 引用类型值：Object    
 
 对基本类型值进行操作时，是直接操作该值的本身。  
