--- a/js-base-note/浏览器事件循环机制.md
+++ b/js-base-note/浏览器事件循环机制.md
@@ -76,29 +76,31 @@ while(true){
 
 ***
 
-## 三、任务队列中的`宏观任务`和`微观任务`
-之前说过，任务队列可能不止一个。不同的任务对应着不同的任务队列。任务可以分为`宏观任务`和`微观任务`，`宏观任务`放入`宏观任务`队列，`微观任务`放入`微观任务`队列。两种任务队列有什么不同呢？ 
+## 三、任务队列中的`宏任务`和`微任务`
+之前说过，任务队列可能不止一个。不同的任务对应着不同的任务队列。任务可以分为`宏任务`和`微任务`，`宏任务`放入`宏任务`队列，`微任务`放入`微任务`队列。两种任务队列有什么不同呢？ 
 
-在执行栈为空的时候，会先优先从`微观任务`队列中调入任务，当`微观任务`队列清空时才会执行`宏观任务`队列中的任务。类似于：
+每一次循环都会先从`宏任务`队列中拿去第一个任务执行（该过程中可能有生产了`宏任务`和`微任务`），之后清空`微任务`队列中所有任务，以保证本次循环的所有`微任务`被执行完毕。类似于：
 ```js
-var microTask = [] // 微观任务队列
-var macroTask = [] // 宏观任务队列
+var microTask = [] // 微任务队列
+var macroTask = [] // 宏任务队列
 var event // 当前执行任务
 
 while(true){
     if(!event) {
-        if(microTask.length) {
-            event = microTask.shift()
-        } else if(macroTask.length) {
+        if(macroTask.length) {
             event = macroTask.shift()
+            event()
         }
-        event()
-        event = null
+        while(microTask.length) {
+            event = microTask.shift()
+            event()
+        }
+        event = null // 一次循环完毕后当前任务应该为空
     }
 }
 ```
-> macro-task 包括：script (整体代码), setTimeout, setInterval, setImmediate, I/O, UI rendering  
-> micro-task 包括：process.nextTick, Promises, Object.observe, MutationObserver, MessageChannel
+> macro-task 包括：`script` (整体代码), `setTimeout`, `setInterval`, `setImmediate`, `I/O`, `UI rendering`  
+> micro-task 包括：`process.nextTick`, `Promises`, `Object.observe`, `MutationObserver`, `MessageChannel`
 
 例子：
 ```js
