--- a/js-base-note/数据类型判别.md
+++ b/js-base-note/数据类型判别.md
@@ -57,6 +57,23 @@ var p = new Person()
 p.constructor === Person // true
 ```
 
+- 方法四：`Object.prototype.toString`。这个方法只能判断 js 的内置数据类型，如：
+```js
+Object.prototype.toString.call(123) // "[object Number]"
+Object.prototype.toString.call('string') // "[object String]"
+Object.prototype.toString.call(true) // "[object Boolean]"
+Object.prototype.toString.call(Symbol(12)) // "[object Symbol]"
+Object.prototype.toString.call({}) // "[object Object]"
+Object.prototype.toString.call([1,2,3]) // "[object Array]"
+Object.prototype.toString.call(function(){}) // "[object Function]"
+```
+无法判断自定义类型值的类型：
+```js
+function A(){}
+var a = new A()
+Object.prototype.toString.call(a) // "[object Object]"
+```
+
 ***
 
 END
