--- a/js-base-note/同源策略及跨域方法.md
+++ b/js-base-note/同源策略及跨域方法.md
@@ -22,6 +22,8 @@ http://192.13.103.7:8080/a.html    同源
 ```
 > PS: 如果一国页面的 url 是域名形式，另一个是 IP 形式，那么，即使域名和 IP 都指向同一个地址，也属于不同源。
 
+在服务端没有设置跨域的情况下，非同源脚本向服务端发跨域请求，服务端是不会拒绝的，浏览器也是能接收到服务端的响应的，但浏览器把响应结果拦截了。
+
 ***
 
 ## 三、安全性
@@ -49,5 +51,6 @@ http 是无状态协议。当用户登录一个网站并且在该网站的不同
 6. `window.name`。
 7. `window.postMessage`。
 8. `hash` 值。
+9. `localStorage` 
 
 ***
