垃圾回收机制

--- a/js-base-note/同源策略及跨域方法.md
+++ b/js-base-note/同源策略及跨域方法.md
@@ -22,8 +22,6 @@ http://192.13.103.7:8080/a.html    同源
 ```
 > PS: 如果一国页面的 url 是域名形式，另一个是 IP 形式，那么，即使域名和 IP 都指向同一个地址，也属于不同源。
 
-在服务端没有设置跨域的情况下，非同源脚本向服务端发跨域请求，服务端是不会拒绝的，浏览器也是能接收到服务端的响应的，但浏览器把响应结果拦截了。
-
 ***
 
 ## 三、安全性
@@ -40,6 +38,8 @@ http 是无状态协议。当用户登录一个网站并且在该网站的不同
 - 服务器不接受非同源网站的请求（除非服务器有跨域设置）。
 - web浏览器允许第一个页面的脚本访问第二个页面里的数据，但是也只有在两个页面有相同的源时。
 
+在服务端没有设置跨域的情况下，非同源脚本向服务端发跨域请求，服务端是不会拒绝的，浏览器也是能接收到服务端的响应的，但浏览器把响应结果拦截了。
+
 ***
 
 ## 四、跨域手段
@@ -54,3 +54,5 @@ http 是无状态协议。当用户登录一个网站并且在该网站的不同
 9. `localStorage` 
 
 ***
+
+END
